Fixes text-wrap bug with the secondary-nav on the homepage.
A bug on some Android devices was causing text in the secondary-nav on the homepage to wrap its text, which is undesirable if it can be prevented. This fix ensures that lines won’t wrap.

--- a/sass/molecules/_header.scss
+++ b/sass/molecules/_header.scss
@@ -429,7 +429,7 @@
 			display:         flex;
 			//flexbox
 			-webkit-justify-content: flex-end;  //Safari 7
-			justify-content:         flex-end;
+			        justify-content: flex-end;
 
 			> li{
 				//box model
@@ -437,6 +437,8 @@
 				//layout
 				display: inline-block;  //IE9
 				float: none;
+				//typography
+				white-space: nowrap;
 			}
 		}
 		
